--- a/ca09_group3_project.Rmd
+++ b/ca09_group3_project.Rmd
@@ -65,8 +65,7 @@ vienna_listings <- vroom("http://data.insideairbnb.com/austria/vienna/vienna/202
 # Price is a character, parse to integer
 vienna_listings <- vienna_listings %>% 
   mutate(price = parse_number(price))
-```
-```{r}
+
 # In case of duplicate rows
 unique_listings = unique(listings[,])
 ```
@@ -468,7 +467,7 @@ vienna_listings_final <- vienna_listings_final %>%
 
 ```{r}
 # Do boxplot for each neighbourhood simplified
-vienna_listings_final %>% 
+#vienna_listings_final %>% 
   ggplot(aes(x=price)) %>% 
   boxplot(neighbourhood_simplified)
 ```
@@ -482,7 +481,7 @@ vienna_listings_final <- vienna_listings_final %>%
 
 # Regression Analysis
 
-Model selection is a structured process. We first compute the target variable, which is the price for two people to stay for four nights. For the same reasons as earlier, we take the natural logarithm of this variable to normalise it. We then assess the correlation matrix of our numerical explanatory variables in order to determine which variables have the strongest relationships with the target variable, and to highlight variables with high collinearity so as to avoid multicollinearity issues amongst the regressors. We then iterate through a number of models in order to determine if the increase in adjusted r squared is worth the increase in exposure to estimation error. When building regression models with a large number of potential independent variables, we must be cautious of the tradeoff between in-sample bias and out of sample variance of predictions. To optimise our model based on this tradeoff, we can compare the adjusted R squared against the out of sample RMSE (from the testing data). We also perform other model diagnostics such as analysis of the residuals, in order to ensure that they are approximately normal and homoskedastic with a mean of zero.
+Model selection is a structured process. We first compute the target variable, which is the price for two people to stay for four nights. For the same reasons as earlier, we take the natural logarithm of this variable to normalise it. We then assess the correlation matrix of our numerical explanatory variables in order to determine which variables have the strongest relationships with the target variable, and to highlight variables with high collinearity so as to avoid multicollinearity issues amongst the regressors. We then iterate through a number of models in order to determine if the increase in adjusted r squared is worth the increase in exposure to estimation error in a stepwise forward regression processz. When building regression models with a large number of potential independent variables, we must be cautious of the tradeoff between in-sample bias and out of sample variance of predictions. To optimise our model based on this tradeoff, we can compare the adjusted R squared against the out of sample RMSE (from the testing data). We also perform other model diagnostics such as analysis of the residuals, in order to ensure that they are approximately normal and homoskedastic with a mean of zero.
 
 ## Target variable
 
@@ -665,7 +664,7 @@ The inclusion of the neighbourhood variable however results in the "Entire home/
 # First we need to summarize the specified room_type category into the baseline for training and testing dataset, then we re-factorise them
 
 vienna_train <- vienna_train %>%
-  mutate(room_type = case_when(
+  mutate(room_types = case_when(
     room_type %in% c("Hotel room", "Entire home/apt") ~ "Entire property", 
     room_type %in% c("Private room") ~ "Private room",
     room_type %in% c("Shared room") ~ "Shared room"
@@ -674,13 +673,13 @@ vienna_train <- vienna_train %>%
 # Now we need to factorise the new variable
 vienna_train <- vienna_train %>% 
   mutate(
-     room_types = fct_relevel(room_type,
+     room_types = fct_relevel(room_types,
                                  "Entire property",
                                  "Private room",
                                  "Shared room"))
 
 vienna_test <- vienna_test %>%
-  mutate(room_type = case_when(
+  mutate(room_types = case_when(
     room_type %in% c("Hotel room", "Entire home/apt") ~ "Entire property", 
     room_type %in% c("Private room") ~ "Private room",
     room_type %in% c("Shared room") ~ "Shared room"
@@ -689,13 +688,13 @@ vienna_test <- vienna_test %>%
 # Now we need to factorise the new variable
 vienna_test <- vienna_test %>% 
   mutate(
-     room_types = fct_relevel(room_type,
+     room_types = fct_relevel(room_types,
                                  "Entire property",
                                  "Private room",
                                  "Shared room"))
 ```
 
-Now we perform model 6 again with the new room_type grouping.
+Now we fit model 6 again with the new room_type grouping.
 
 ```{r}
 model6 <- lm(lnprice_4_nights ~ room_types+neighbourhood_simplified+ number_of_reviews+review_scores_rating+accommodates+bathrooms+host_is_superhost, data = vienna_train)
@@ -764,7 +763,8 @@ models_compare <- huxreg(model1, model2, model3, model4, model5, model6, model7,
                  statistics = c('#observations' = 'nobs', 
                                 'R squared' = 'r.squared', 
                                 'Adj. R Squared' = 'adj.r.squared', 
-                                'Residual SE' = 'sigma'), 
+                                'Residual SE' = 'sigma',
+                                'AIC' = 'AIC'), 
                  bold_signif = 0.05, 
                  stars = NULL
 ) %>% 
@@ -791,16 +791,30 @@ RMSE_compare = data.frame(RMSE1, RMSE2, RMSE3, RMSE4, RMSE5, RMSE6, RMSE7, RMSE8
 
 RMSE_compare
 ```
+Model 7 demonstrates the highest coefficient of determination, the lowest out-of-sample RMSE, and the lowest AIC amongst the models. Therefore, we decide to select this as our optimal model for the predictions. On average, this model should give us the most accurate predictions for average property price for the given input variables with the lowest standard errors.
+
+Its residuals are approximately normal as they appear to simulate a white noise distribution with no clear pattern as the target variable varies. The qq plot is approximately along the 45 degree line also. It does not appear that we require heteroskedasticity robust standard errors.
+
+## Predictions
+
+Finally, we use our optimised model for predictions.
+
+## Prediction 1
+We first predict the price for  a private room, have at least 10 reviews, and an average rating of at least 90 (4.5/5.0). Use your best model to predict the total cost to stay at this Airbnb for 4 nights. Include the appropriate 95% interval with your prediction. Report the point prediction and interval in terms of `price_4_nights`. 
+```{r}
+imaginary_stay1 <- data_frame(room_types="Private room",
+                              neighbourhood_simplified = c("T2"), # vary at will
+                              review_scores_rating = 4.5:5,
+                              accommodates=2,
+                              bathrooms=1,
+                              host_is_superhost=TRUE,
+                              availability_30=1:30)
+
+exp(predict.lm(model7, imaginary_stay1, interval = "prediction"))
+```
 
 
-## Diagnostics, collinearity, summary tables
 
-As you keep building your models, it makes sense to:
-
-1. Check the residuals, using `autoplot(model_x)`
-2. As you start building models with more explanatory variables, make sure you use `car::vif(model_x)`` to calculate the **Variance Inflation Factor (VIF)** for your predictors and determine whether you have colinear variables. A general guideline is that a VIF larger than 5 or 10 is large, and your model may suffer from collinearity. Remove the variable in question and run your model again without it.
-3. Create a summary table, using `huxtable` (https://mfa2022.netlify.app/example/modelling_side_by_side_tables/) that shows which models you worked on, which predictors are significant, the adjusted $R^2$, and the Residual Standard Error.
-4. Finally, you must use the best model you came up with for prediction. Suppose you are planning to visit the city you have been assigned to over reading week, and you want to stay in an Airbnb. Find Airbnb's in your destination city that are a private room, have at least 10 reviews, and an average rating of at least 90 (4.5/5.0). Use your best model to predict the total cost to stay at this Airbnb for 4 nights. Include the appropriate 95% interval with your prediction. Report the point prediction and interval in terms of `price_4_nights`. 
   - if you used a log(price_4_nights) model, make sure you anti-log to convert the value in $. You can read more about [hot to interpret a regression model when some variables are log transformed here](https://stats.idre.ucla.edu/other/mult-pkg/faq/general/faqhow-do-i-interpret-a-regression-model-when-some-variables-are-log-transformed/)
 
 
